docs: steering committee updates

--- a/src/pages/all-about-carbon/partners.mdx
+++ b/src/pages/all-about-carbon/partners.mdx
@@ -87,9 +87,19 @@ practitioners to ensure Carbon stays true to the community we're serving.
 ![Jeannie Servaas headshot](/images/team/servaas_jean.png)
 
 </Profile>
+<Profile name="JD Speer" title="Design Lead, IBM Storage">
+
+![JD Speer headshot](/images/team/speer_jd.png)
+
+</Profile>
 <Profile name="Wonil Suh" title="IBM Design Principal, Digital Growth and Commerce">
 
 ![Wonil Suh headshot](/images/team/suh_wonil.png)
+
+</Profile>
+<Profile name="Marko Thorhauer" title="Executive Creative Director, IBM Design Principal, IBM iX">
+
+![Marko Thorhauer headshot](/images/team/thorhauer_marko.png)
 
 </Profile>
 <Profile name="Diana Tran" title="Visual Design Practice Lead, IBM Sterling">
