docs: component content fixes

--- a/src/pages/components/data-table/usage.mdx
+++ b/src/pages/components/data-table/usage.mdx
@@ -364,15 +364,15 @@ have 2 lines of content in a single row.
 colMd={4} colLg={4}
 caption="Do use the same row height for the table and header rows.">
 
-![Do: uDo use the same row height for the table and header rows.](./images/datatable-header-size-do.png)
+![Do: Do use the same row height for the table and header rows.](./images/datatable-header-size-do.png)
 
 </DoDont>
 <DoDont
 colMd={4} colLg={4}
 type="dont"
-caption="Don’t mix row heights for in the table and header rows.">
+caption="Don’t mix row heights for the table and header rows.">
 
-![Don’t: mix row heights for in the table and header rows.](./images/datatable-header-size-dont.png)
+![Don’t: mix row heights for the table and header rows.](./images/datatable-header-size-dont.png)
 
 </DoDont>
 </DoDontRow>
