--- a/src/pages/components/date-picker/usage.mdx
+++ b/src/pages/components/date-picker/usage.mdx
@@ -17,7 +17,7 @@ times.
 
 <AnchorLink>Overview</AnchorLink>
 <AnchorLink>Live demo</AnchorLink>
-<AnchorLink>Format</AnchorLink>
+<AnchorLink>Formatting</AnchorLink>
 <AnchorLink>Content</AnchorLink>
 <AnchorLink>Universal behaviors</AnchorLink>
 <AnchorLink>Simple date input</AnchorLink>
@@ -137,7 +137,7 @@ for scheduling tasks.
 
   </ComponentDemo>
 
-## Format
+## Formatting
 
 ### Anatomy of date pickers
 
