--- a/src/pages/components/inline-loading/usage.mdx
+++ b/src/pages/components/inline-loading/usage.mdx
@@ -116,7 +116,7 @@ animations.
 
 This is the text that appears while the action is happening. The label should
 tell the user what action is being performed. For example, if it appears while a
-form is being save then it should say "Saving ...".
+form is being save then it should say “Saving ...”.
 
 #### Finished loading label
 
