--- a/src/pages/guidelines/icons/usage.mdx
+++ b/src/pages/guidelines/icons/usage.mdx
@@ -101,10 +101,7 @@ can add padding to a touch target with CSS to meet the 44px requirement.
 
 ![touch target padding](images/iconography-usage-padding-6.svg)
 
-<Caption>
-  The menu button that is also a touch target may have a 20px ✕ 20px icon
-  centered in a 48px ✕ 48px button.
-</Caption>
+<Caption>A 22px icon centered in a 48px touch target.</Caption>
 
 ### Color
 
