--- a/src/pages/guidelines/typography/overview.mdx
+++ b/src/pages/guidelines/typography/overview.mdx
@@ -120,7 +120,7 @@ long text.
 
 Each weight has an italic style, which should only be used when you need to
 emphasize certain words in a sentence (titles of works, technical terms, names
-of devices, captions, etc.).
+of devices, and captions).
 
 <TypeWeight type="italic" />
 
