docs: content fixes pt 2

--- a/src/pages/patterns/filtering/index.mdx
+++ b/src/pages/patterns/filtering/index.mdx
@@ -34,7 +34,7 @@ faced with a large number of options.
 ## Selection methods
 
 Choosing the right filter selection method will improve usability and user
-effiency. Carbon supports several selection methods that are approrpriate for
+efficiency. Carbon supports several selection methods that are appropriate for
 different situations. Consider the data your users are looking at, what they are
 trying to achieve, and how they might intuitively narrow down the data.
 
