--- a/src/pages/patterns/forms-pattern/index.mdx
+++ b/src/pages/patterns/forms-pattern/index.mdx
@@ -123,9 +123,9 @@ Advantages:
 #### Optional vs. mandatory
 
 All fields in a form are assumed required, with optional fields being tagged as
-so in the label. Although advise avoiding an excess of optional fields, if the
-situation arises, we recommend devoting an entire section to optional fields to
-avoid excessive repetition.
+so in the label. An excess of optional fields should be avoided. If it's
+necessary to have a large number of optional fields, we recommend devoting an
+entire section to optional fields to avoid excessive repetition.
 
 <Row>
 <Column colLg={8}>
