--- a/src/pages/patterns/login-pattern/index.mdx
+++ b/src/pages/patterns/login-pattern/index.mdx
@@ -131,8 +131,7 @@ secure.
 Multi-Factor Authentication (MFA) requires a user to present more than one
 credential, in order to verify their identity. This method provides an added
 layer of security, while still maintaining ease of use. This often includes a
-password and an additional additional credential, like an SMS code or known
-backup code.
+password and an additional credential, like an SMS code or known backup code.
 
 Carbon does not have consolidated guidance around multi-factor authentication.
 Since it’s something that products approach in different ways, we'd like to
