--- a/src/pages/patterns/search-pattern/index.mdx
+++ b/src/pages/patterns/search-pattern/index.mdx
@@ -62,7 +62,7 @@ within a data table.
 </Column>
 </Row>
 
-1. **Scope filter (optional):** The optional scoped search allow users to limit
+1. **Scope filter (optional):** The optional scoped search allows users to limit
    their searches to a section or category of content on a website.
 1. **Search icon:** Signifies a search field. The magnifying glass icon is a
    universal way to indicate search.
