docs: add carbon svelte implementation

--- a/src/pages/all-about-carbon/what-is-carbon.mdx
+++ b/src/pages/all-about-carbon/what-is-carbon.mdx
@@ -34,9 +34,9 @@ clear, discoverable guidance around design and development best practices.
 The design system is built [React](/developing/frameworks/react) first. We also
 support core parts of the system in
 [vanilla JS](/developing/frameworks/vanilla),
-[Angular](/developing/frameworks/angular), and
-[Vue](/developing/frameworks/vue). If you’re using a different framework, you
-can still build components by following our guidelines for
+[Angular](/developing/frameworks/angular), [Vue](/developing/frameworks/vue),
+and [Svelte](/developing/frameworks/svelte). If you’re using a different
+framework, you can still build components by following our guidelines for
 [other frameworks](/developing/frameworks/other-frameworks).
 
 ## Guiding principles
