--- a/src/pages/developing/dev-resources/index.mdx
+++ b/src/pages/developing/dev-resources/index.mdx
@@ -62,6 +62,14 @@ your framework of choice.
     <MdxIcon name="github" />
   </ResourceCard>
 </Column>
+
+<Column colMd={4} colLg={4} noGutterSm>
+  <ResourceCard
+    subTitle="Carbon Svelte"
+    href="https://github.com/IBM/carbon-components-svelte">
+    <MdxIcon name="github" />
+  </ResourceCard>
+</Column>
 </Row>
 
 ### Storybooks
