--- a/src/pages/developing/frameworks/angular.mdx
+++ b/src/pages/developing/frameworks/angular.mdx
@@ -2,8 +2,8 @@
 title: Frameworks
 description:
   The Carbon Design System is built React first. We also support core parts of
-  the system in vanilla JS, Angular, and Vue.
-tabs: ['React', 'Vanilla', 'Angular', 'Vue', 'Other frameworks']
+  the system in vanilla JS, Angular, Vue, and Svelte.
+tabs: ['React', 'Vanilla', 'Angular', 'Vue', 'Svelte', 'Other frameworks']
 ---
 
 <PageDescription>
