--- a/src/pages/developing/get-started.mdx
+++ b/src/pages/developing/get-started.mdx
@@ -27,7 +27,7 @@ checklist of everything you need to get up and running.
 ### Install your framework of choice
 
 The Carbon Design System is built React first. We also support core parts of the
-system in vanilla JS, Angular, and Vue and offer guidelines for other
+system in vanilla JS, Angular, Vue, and Svelte and offer guidelines for other
 frameworks. Head over to [Frameworks](/developing/frameworks/react) for all the
 information you need to get started.
 
