--- a/src/pages/help/faq/index.mdx
+++ b/src/pages/help/faq/index.mdx
@@ -108,9 +108,9 @@ Carbon components are supported in the following browsers:
 
 ### What languages are the components written in?
 
-Carbon is built React first. We also support vanilla JS, Angular, and Vue
-implementations. Check out [Frameworks](/developing/frameworks/react) to learn
-more about what you need to get started with Carbon implementations.
+Carbon is built React first. We also support vanilla JS, Angular, Vue, and
+Svelte implementations. Check out [Frameworks](/developing/frameworks/react) to
+learn more about what you need to get started with Carbon implementations.
 
 ### Where do I find mobile components?
 
