fix: image size on accessibility color page

--- a/src/pages/guidelines/accessibility/color.mdx
+++ b/src/pages/guidelines/accessibility/color.mdx
@@ -72,7 +72,13 @@ might help to use a color-blind simulator to review visibility of content. If
 you're working in Sketch, we recommend the [Stark](http://www.getstark.co/)
 plugin.
 
+<Row>
+<Column colLg={8}>
+
 ![rainbow palette showing relationship between colors for users with color blindness](images/color-accessibility-1.png)
+
+</Column>
+</Row>
 
 ## Tools
 
