--- a/src/pages/developing/frameworks/other-frameworks.mdx
+++ b/src/pages/developing/frameworks/other-frameworks.mdx
@@ -9,7 +9,7 @@ tabs: ['React', 'Vanilla', 'Angular', 'Vue', 'Svelte', 'Other frameworks']
 <PageDescription>
 
 The Carbon Design System is built React first. We also support core parts of the
-system in vanilla JS, Angular, Vue and Svelte. If you’re you’re using a
+system in vanilla JS, Angular, Vue, and Svelte. If you’re using a
 different framework, you can still build components by following the guidelines
 below.
 
