chore(react): use "and" instead of ampersand per suggestion
Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

--- a/src/pages/developing/frameworks/react.mdx
+++ b/src/pages/developing/frameworks/react.mdx
@@ -8,7 +8,7 @@ tabs: ['React', 'Vanilla', 'Angular', 'Vue', 'Svelte', 'Other frameworks']
 
 <PageDescription>
 
-The Carbon React library provides front-end developers & engineers a collection
+The Carbon React library provides front-end developers and engineers a collection
 of reusable React components to build websites and user interfaces. Adopting the
 library enables developers to use consistent markup, styles, and behavior in
 prototype and production work.
